add_executable(test1 test1.cpp)
target_link_libraries(test1 mario_net)

add_executable(test2 test2.cpp)
target_link_libraries(test2 mario_net)

add_executable(test3 test3.cpp)
target_link_libraries(test3 mario_net)

add_executable(test4 test4.cpp)
target_link_libraries(test4 mario_net)

add_executable(test6 test6.cpp)
target_link_libraries(test6 mario_net)

add_executable(test7 test7.cpp)
target_link_libraries(test7 mario_net)

add_executable(test8 test8.cpp)
target_link_libraries(test8 mario_net)

add_executable(test9 test9.cpp)
target_link_libraries(test9 mario_net)

add_executable(test12 test12.cpp)
target_link_libraries(test12 mario_net)
